--- a/SROM/SROM.csproj
+++ b/SROM/SROM.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Calc.cs" />
     <Compile Include="CalcTest.cs" />
+    <Compile Include="ModCalc.cs" />
     <Compile Include="Num.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
